[project]
name = "invoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.28.3",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
]




[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
